Converted all project grid pictures to gifs

--- a/index.html
+++ b/index.html
@@ -64,114 +64,72 @@
   <!-- Portfolio Grid Section -->
     <section class="portfolio" id="portfolio">
     <div class="container">
-      <h2 class="text-center text-uppercase text-secondary mb-0">Neon Play Games</h2>
+      <h2 class="text-center text-uppercase text-secondary mb-0">Highlights</h2>
       <hr class="star-dark mb-5">
         <div class="row">
-            <div class="col-sm-12">
-                <div class="row">
-                    <div class="col-md-6 col-lg-6">
-                        <div class="row">
-                            <div class="col-xs-6 col-md-6 col-lg-5">
-                                <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-1">
-                                <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
-                                    <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                                        <i class="fas fa-search-plus fa-3x"></i>
-                                    </div>
-                                </div>
-                                <img class="img-fluid" src="img/portfolio/rollersplat.png" alt="">
-                                </a>
-                            </div>
-                            <div class="col-xs-6 col-md-6 col-lg-5">
-                                <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-2">
-                                <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
-                                    <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                                        <i class="fas fa-search-plus fa-3x"></i>
-                                    </div>
-                                </div>
-                                <img class="img-fluid" src="img/portfolio/soccerkick.png" alt="">
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-12 col-md-6 col-lg-6">
-                        <div class="col-md-11 col-lg-12">
-                            <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-3">
-                            <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
-                                <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                                    <i class="fas fa-search-plus fa-3x"></i>
-                                </div>
-                            </div>
-                            <img class="img-fluid" src="img/portfolio/frightlight.png" alt="">
-                            </a>
-                        </div> 
-                        <div class="col-md-11 col-lg-12">
-                            <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-3">
-                            <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
-                                <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                                    <i class="fas fa-search-plus fa-3x"></i>
-                                </div>
-                            </div>
-                            <img class="img-fluid" src="img/portfolio/bridgejumper.png" alt="">
-                            </a>
-                        </div>
+            <div class="col-md-6 col-lg-4">
+                <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-1">
+                <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
+                    <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
+                        <i class="fas fa-search-plus fa-3x"></i>
                     </div>
                 </div>
+                <img class="img-fluid" src="img/portfolio/rollersplat.gif" alt="">
+                </a>
+            </div>
+            <div class="col-md-6 col-lg-4">
+                <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-2">
+                <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
+                    <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
+                        <i class="fas fa-search-plus fa-3x"></i>
+                    </div>
+                </div>
+                <img class="img-fluid" src="img/portfolio/soccerkick.gif" alt="">
+                </a>
+            </div>
+            <div class="col-md-6 col-lg-4">
+                <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-3">
+                <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
+                    <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
+                        <i class="fas fa-search-plus fa-3x"></i>
+                    </div>
+                </div>
+                <img class="img-fluid" src="img/portfolio/frightlight.gif" alt="">
+                </a>
+            </div> 
+            <div class="col-md-6 col-lg-4">
+                <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-3">
+                <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
+                    <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
+                        <i class="fas fa-search-plus fa-3x"></i>
+                    </div>
+                </div>
+                <img class="img-fluid" src="img/portfolio/bridgejumper.gif" alt="">
+                </a>
+            </div>
+            <div class="col-md-6 col-lg-4">
+                <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-5">
+                <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
+                    <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
+                        <i class="fas fa-search-plus fa-3x"></i>
+                    </div>
+                </div>
+                <img class="img-fluid" src="img/portfolio/festivalthrashers.gif" alt="">
+                </a>
+            </div>
+            <div class="col-md-6 col-lg-4">
+                <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-6">
+                <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
+                    <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
+                        <i class="fas fa-search-plus fa-3x"></i>
+                    </div>
+                </div>
+                <img class="img-fluid" src="img/portfolio/splitdecision.gif" alt="">
+                </a>
             </div>
         </div>
     </div>
     </section>
-    
-    <!-- Portfolio Grid Section -->
-  <section class="portfolio" id="portfolio">
-    <div class="container">
-      <h2 class="text-center text-uppercase text-secondary mb-0">Uni Projects</h2>
-      <hr class="star-dark mb-5">
-      <div class="row">
-        <div class="col-md-6 col-lg-6">
-          <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-5">
-            <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
-              <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                <i class="fas fa-search-plus fa-3x"></i>
-              </div>
-            </div>
-            <img class="img-fluid" src="img/portfolio/cake.png" alt="">
-          </a>
-        </div>
-        <div class="col-md-6 col-lg-6">
-          <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-6">
-            <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
-              <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                <i class="fas fa-search-plus fa-3x"></i>
-              </div>
-            </div>
-            <img class="img-fluid" src="img/portfolio/cake.png" alt="">
-          </a>
-        </div>
-		<div class="col-md-6 col-lg-6">
-          <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-7">
-            <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
-              <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                <i class="fas fa-search-plus fa-3x"></i>
-              </div>
-            </div>
-            <img class="img-fluid" src="img/portfolio/cake.png" alt="">
-          </a>
-        </div>
-		<div class="col-md-6 col-lg-6">
-          <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-8">
-            <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
-              <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                <i class="fas fa-search-plus fa-3x"></i>
-              </div>
-            </div>
-            <img class="img-fluid" src="img/portfolio/cake.png" alt="">
-          </a>
-        </div>
-      </div>
-    </div>
-  </section>
-
-
 
   <!-- About Section -->
   <section class="bg-primary text-white mb-0" id="about">
