changed cv icon

--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
             </div>
             <div class="col-lg-2 text-center">
                 <h4><u>CV</u></h4>
-                <a target="_blank" href="downloads/ThomasToye-CV.pdf"><i class="fas fa-file-pdf fa-3x" aria-hidden="true"></i>
+                <a target="_blank" href="downloads/ThomasToye-CV.pdf"><i class="fas fa-address-card fa-3x" aria-hidden="true"></i>
                 </a>
             </div>
             <div class="col-lg-2 text-center">
