--- a/index.html
+++ b/index.html
@@ -211,37 +211,37 @@
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h2>Contact</h2>
-                <hr class="star-primary">
+                <!--<hr class="star-primary">-->
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-2 text-center">
+            <div class="col-xs-6 col-md-4 col-lg-2 text-center">
                 <h4><u>Email</u></h4>
                 <a target="_blank" href = "mailto:tom@tomtoye.co.uk">
                     <i class="fas fa-envelope-square fa-3x" aria-hidden="true"></i>
                 </a>
             </div>
-            <div class="col-lg-2 text-center">
+            <div class="col-xs-6 col-md-4 col-lg-2 text-center">
                 <h4><u>CV</u></h4>
                 <a target="_blank" href="downloads/ThomasToye-CV.pdf"><i class="fas fa-address-card fa-3x" aria-hidden="true"></i>
                 </a>
             </div>
-            <div class="col-lg-2 text-center">
+            <div class="col-xs-6 col-md-4 col-lg-2 text-center">
                 <h4><u>GitHub</u></h4>
                 <a target="_blank" href = "https://github.com/tomtoye"><i class="fab fa-github-square fa-3x" aria-hidden="true"></i> 
                 </a>
             </div>
-            <div class="col-lg-2 text-center">
+            <div class="col-xs-6 col-md-4 col-lg-2 text-center">
                 <h4><u>Bitbucket</u></h4>
                 <a target="_blank" href = "https://bitbucket.org/tomtoye"><i class="fab fa-bitbucket fa-3x" aria-hidden="true"></i> 
                 </a>
             </div>
-            <div class="col-lg-2 text-center">
+            <div class="col-xs-6 col-md-4 col-lg-2 text-center">
                 <h4><u>Twitter</u></h4>
                 <a target="_blank" href = "https://twitter.com/Tom_Toye"><i class="fab fa-twitter-square fa-3x" aria-hidden="true"></i> 
                 </a>
             </div>
-            <div class="col-lg-2 text-center">
+            <div class="col-xs-6 col-md-4 col-lg-2 text-center">
                 <h4><u>Linked In</u></h4>
                 <a target="_blank" href = "https://www.linkedin.com/in/thomas-toye-3547b7130/">
                 <i class="fab fa-linkedin fa-3x" aria-hidden="true"></i>
