Smaller header text in portfolio grid. Fixed allignment issue in "About key skills section"

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <!--<hr class="star-dark mb-5">--> <br>
         <div class="row">
             <div class="col-md-6 col-lg-4">
-                <h3 align="center">Roller Splat</h3>
+                <h5 align="center">Roller Splat</h5>
                 <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-1">
                 <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
                     <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
@@ -85,7 +85,7 @@
                 </a>
             </div>
             <div class="col-md-6 col-lg-4">
-                <h3 align="center">Soccer Kick</h3>
+                <h5 align="center">Soccer Kick</h5>
                 <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-2">
                 <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
                     <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
@@ -97,7 +97,7 @@
                 </a>
             </div>
             <div class="col-md-6 col-lg-4">
-                <h3 align="center">Fright Light</h3>
+                <h5 align="center">Fright Light</h5>
                 <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-3">
                 <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
                     <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
@@ -109,7 +109,7 @@
                 </a>
             </div> 
             <div class="col-md-6 col-lg-4">
-                <h3 align="center">Bridge Jumper</h3>
+                <h5 align="center">Bridge Jumper</h5>
                 <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-3">
                 <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
                     <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
@@ -121,7 +121,7 @@
                 </a>
             </div>
             <div class="col-md-6 col-lg-4">
-                <h3 align="center">Festival Thrashers</h3>
+                <h5 align="center">Festival Thrashers</h5>
                 <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-5">
                 <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
                     <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
@@ -133,7 +133,7 @@
                 </a>
             </div>
             <div class="col-md-6 col-lg-4">
-                <h3 align="center">Split Decision</h3>
+                <h5 align="center">Split Decision</h5>
                 <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-6">
                 <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
                     <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
@@ -202,6 +202,7 @@
                 </div>
                 <div class="col-md-4">
                     <h4><u>Key Skills</u></h4>
+                    <div class="row">
                     <ul>
                         <li>Version Control</li>
                         <li>Rapid Prototyping</li>
@@ -210,6 +211,7 @@
                         <li>Game Economy Balancing</li>
                     </ul>
                 </div>
+                    </div>
                 <div class="col-md-4">
                    <h4><u>Profile</u></h4>
                     <p>Experienced at working efficiently in teams. Enthusiastic learner with a determined attitude to the work at hand. Effective problem solver with a methodical approach to all possible solutions.</p>
