Modified header strength in portfolio modals and removed old gif

--- a/index.html
+++ b/index.html
@@ -289,8 +289,8 @@
       <div class="container text-center">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2 class="text-secondary text-uppercase mb-0">Roller Splat</h2>
-            <hr class="star-dark mb-5">
+            <h4 class="text-secondary text-uppercase mb-0">Roller Splat</h4>
+            <!--<hr class="star-dark mb-5">-->
             <img class="img-fluid mb-5" src="img/portfolio/game.png" alt="">
             <p class="mb-5">Content coming soon</p>
             <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
@@ -311,8 +311,8 @@
       <div class="container text-center">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2 class="text-secondary text-uppercase mb-0">Soccer Kick</h2>
-            <hr class="star-dark mb-5">
+            <h4 class="text-secondary text-uppercase mb-0">Soccer Kick</h4>
+            <!--<hr class="star-dark mb-5">-->
             <img class="img-fluid mb-5" src="img/portfolio/game.png" alt="">
             <p class="mb-5">Content coming soon</p>
             <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
@@ -333,8 +333,8 @@
       <div class="container text-center">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2 class="text-secondary text-uppercase mb-0">Fright Light</h2>
-            <hr class="star-dark mb-5">
+            <h4 class="text-secondary text-uppercase mb-0">Fright Light</h4>
+            <!--<hr class="star-dark mb-5">-->
             <img class="img-fluid mb-5" src="img/portfolio/game.png" alt="">
             <p class="mb-5">Content coming soon</p>
             <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
@@ -355,8 +355,8 @@
       <div class="container text-center">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2 class="text-secondary text-uppercase mb-0">Bridge Jumper</h2>
-            <hr class="star-dark mb-5">
+            <h4 class="text-secondary text-uppercase mb-0">Bridge Jumper</h4>
+            <!--<hr class="star-dark mb-5">-->
             <img class="img-fluid mb-5" src="img/portfolio/game.png" alt="">
             <p class="mb-5">Content coming soon</p>
             <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
@@ -377,8 +377,8 @@
       <div class="container text-center">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2 class="text-secondary text-uppercase mb-0">Festival Thrashers</h2>
-            <hr class="star-dark mb-5">
+            <h4 class="text-secondary text-uppercase mb-0">Festival Thrashers</h4>
+            <!--<hr class="star-dark mb-5">-->
             <img class="img-fluid mb-5" src="img/portfolio/game.png" alt="">
             <p class="mb-5">Content coming soon</p>
             <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
@@ -399,8 +399,8 @@
       <div class="container text-center">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2 class="text-secondary text-uppercase mb-0">Split Decision</h2>
-            <hr class="star-dark mb-5">
+            <h4 class="text-secondary text-uppercase mb-0">Split Decision</h4>
+            <!--<hr class="star-dark mb-5">-->
             <img class="img-fluid mb-5" src="img/portfolio/game.png" alt="">
             <p class="mb-5">Content coming soon</p>
             <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
