--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     </section>
     
     <!-- About Section -->
-      <section class="bg-primary text-white mb-0" id="about">
+      <section class="bg-secondary text-white mb-0" id="about">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
