--- a/index.html
+++ b/index.html
@@ -333,11 +333,11 @@
                      </p>
                      <p class="mb-5" align="left">
                         After just a few days I was able to polish the game up and it was soft launched on the iOS app store and from there the incremental updates along the way really pushed it to the point where Voodoo chose to publish the game.
-                        Beacuse I was at university part time whilst creating roller splat and the momentum needed to keep Roller Splat going the project was handed over to another developer at Neon Play and from here I was able to cleary see a lot of the mistakes I had made and what I could of done differently to really help improve the project. For example a lot of the code used was still quite hacky from the original games-jam and whilst making levels wasn't to clunky, the current system we have is far superior to what I originally developed.
+                        Beacuse I was at university part time and the momentum needed to keep Roller Splat going was growing, the project was handed over to another developer at Neon Play and from here I was able to cleary see a lot of the mistakes I had made and what I could of done differently to really help improve the project. For example a lot of the code used was still quite hacky from the original games-jam and whilst making levels wasn't to clunky, the current system we have is far superior to what I originally developed.
                      </p>
                      <p><img class="img-fluid" src="img/portfolio/rollersplat-levels.jpg"></p>
                      <p class="mb-5" align="left">
-                        After creating hyper-casual games for over a year, Roller Splat was a project where I felt like I was able to combine all that I had learned both about designing and developing these games and truly innovate in the market. Even staff at Voodoo admitted they never expected a hyper-casual puzzle game could work!
+                        I have been creating hyper-casual games for over a year and Roller Splat was a project where I felt like I was able to combine all that I had learned both about designing and developing these games. With this project I felt like I was able to truly innovate in the hyper-casual market. Even staff at Voodoo admitted they never expected a hyper-casual / puzzle game could work!
                      </p>
                      <div class="row">
                         <div class="col-lg-6 mx-auto">
@@ -596,7 +596,7 @@
             </div>
          </div>
       </div>
-      <!-- Portfolio Modal 11 -->
+      <!-- Portfolio Modal 12 -->
       <div class="portfolio-modal mfp-hide" id="portfolio-modal-11">
          <div class="portfolio-modal-dialog">
             <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
