Re-added banner/dividers Added gamepad icon to nav bar Removed bitbucket and github links (until i gather repos to make public)

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <!-- Navigation -->
       <nav class="navbar navbar-expand-lg bg-secondary fixed-top text-uppercase" id="mainNav">
          <div class="container">
-            <a class="navbar-brand js-scroll-trigger" href="#page-top">TOM TOYE - Game Dev</a>
+            <a class="navbar-brand js-scroll-trigger" href="#page-top">TOM TOYE <i class="fas fa-gamepad fa-1x" aria-hidden="true"></i> Game Dev</a>
             <button class="navbar-toggler navbar-toggler-right text-uppercase bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             Menu
             <i class="fas fa-bars"></i>
@@ -56,7 +56,7 @@
       <section class="portfolio" id="portfolio">
          <div class="container">
             <h3 class="text-center text-uppercase text-secondary mb-0">Highlights</h3>
-            <!--<hr class="star-dark mb-5">--> <br>
+            <hr class="star-light mb-5"> <br>
             <div class="row">
                <div class="col-md-6 col-lg-4">
                   <h5 align="center">Roller Splat</h5>
@@ -135,7 +135,7 @@
          <br>
          <div class="container">
             <h4 class="text-center text-uppercase text-secondary mb-0">More Projects</h4>
-            <!--<hr class="star-dark mb-5">--> <br>
+            <hr class="star-light mb-5"> <br>
             <div class="row">
                <div class="col-xs-6 col-md-6 col-lg-3">
                   <h5 align="center">Child</h5>
@@ -194,7 +194,7 @@
             <div class="row">
                <div class="col-lg-12 text-center">
                   <h2>About</h2>
-                  <!--<hr class="star-light">--><br>
+                  <hr class="star-light">
                </div>
             </div>
             <div class="row">
@@ -263,22 +263,22 @@
             <div class="row">
                <div class="col-lg-12 text-center">
                   <h2>Contact</h2>
-                  <!--<hr class="star-primary">-->
+                  <hr class="star-light">
                </div>
             </div>
             <div class="row">
-               <div class="col-xs-6 col-md-4 col-lg-2 text-center">
+               <div class="col-xs-6 col-md-3 col-lg-3 text-center">
                   <h4><u>Email</u></h4>
                   <a target="_blank" href = "mailto:tom@tomtoye.co.uk">
                   <i class="fas fa-envelope-square fa-3x" aria-hidden="true"></i>
                   </a>
                </div>
-               <div class="col-xs-6 col-md-4 col-lg-2 text-center">
+               <div class="col-xs-6 col-md-3 col-lg-3 text-center">
                   <h4><u>CV</u></h4>
-                  <a target="_blank" href="downloads/ThomasToye-CV.pdf"><i class="fas fa-address-card fa-3x" aria-hidden="true"></i>
+                  <a target="_blank" href="downloads/ThomasToye-CV.pdf"><i class="fas fa-poll-h fa-3x" aria-hidden="true"></i>
                   </a>
                </div>
-               <div class="col-xs-6 col-md-4 col-lg-2 text-center">
+               <!--<div class="col-xs-6 col-md-4 col-lg-2 text-center">
                   <h4><u>GitHub</u></h4>
                   <a target="_blank" href = "https://github.com/tomtoye"><i class="fab fa-github-square fa-3x" aria-hidden="true"></i> 
                   </a>
@@ -287,13 +287,13 @@
                   <h4><u>Bitbucket</u></h4>
                   <a target="_blank" href = "https://bitbucket.org/tomtoye"><i class="fab fa-bitbucket fa-3x" aria-hidden="true"></i> 
                   </a>
-               </div>
-               <div class="col-xs-6 col-md-4 col-lg-2 text-center">
+               </div>-->
+               <div class="col-xs-6 col-md-3 col-lg-3 text-center">
                   <h4><u>Twitter</u></h4>
                   <a target="_blank" href = "https://twitter.com/Tom_Toye"><i class="fab fa-twitter-square fa-3x" aria-hidden="true"></i> 
                   </a>
                </div>
-               <div class="col-xs-6 col-md-4 col-lg-2 text-center">
+               <div class="col-xs-6 col-md-3 col-lg-3 text-center">
                   <h4><u>Linked In</u></h4>
                   <a target="_blank" href = "https://www.linkedin.com/in/thomas-toye-3547b7130/">
                   <i class="fab fa-linkedin fa-3x" aria-hidden="true"></i>
