Using icons in lists in the about section

--- a/index.html
+++ b/index.html
@@ -230,25 +230,24 @@
                   </div>
                   <h4><u>Platforms</u></h4>
                   <div class="row">
-                     <div class="col-xs-8">
-                        <ul>
-                           <li>iOS</li>
-                           <li>Android</li>
-                           <li>PC</li>
-                        </ul>
-                     </div>
+                    <ul class="fa-ul">
+                      <li><span class="fa-li" ><i class="fab fa-apple"></i></span>iOS</li>
+                      <li><span class="fa-li"><i class="fab fa-android"></i></span>Android</li>
+                      <li><span class="fa-li"><i class="fas fa-desktop"></i></span>Desktop</li>
+                    </ul>
                   </div>
                </div>
                <div class="col-md-4">
                   <h4><u>Key Skills</u></h4>
                   <div class="row">
-                     <ul>
-                        <li>Version Control</li>
-                        <li>Rapid Prototyping</li>
-                        <li>Monetisation</li>
-                        <li>Data Analytics</li>
-                        <li>Game Economy Balancing</li>
-                     </ul>
+                    <ul class="fa-ul">
+                      <li><span class="fa-li" ><i class="fas fa-code-branch"></i></span>Version Control</li>
+                      <li><span class="fa-li"><i class="fas fa-snowplow"></i></span>Rapid Prototyping</li>
+                      <li><span class="fa-li"><i class="fas fa-file-invoice-dollar"></i></span>Monetisation</li>
+                      <li><span class="fa-li"><i class="fas fa-mobile-alt"></i></span>Mobile Development</li>
+                      <li><span class="fa-li"><i class="far fa-chart-bar"></i></span>Game Economy Balancing</li>
+                      <li><span class="fa-li"><i class="fas fa-people-carry"></i></span>Teamwork</li>
+                    </ul>
                   </div>
                </div>
                <div class="col-md-4">
