--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
    </head>
    <body id="page-top">
       <!-- Navigation -->
-      <nav class="navbar navbar-expand-lg bg-secondary fixed-top text-uppercase" id="mainNav">
+      <nav class="navbar navbar-expand-lg bg-tertiary fixed-top text-uppercase" id="mainNav">
          <div class="container">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">TOM TOYE <i class="fas fa-gamepad fa-1x" aria-hidden="true"></i> Game Dev</a>
             <button class="navbar-toggler navbar-toggler-right text-uppercase bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
